public/css/style.css
:root {
  --button-text-color: #00adef;
}

body {
  box-sizing: border-box;
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  background-color: white;
  filter: drop-shadow(0 0 7px gray);
  -webkit-filter: drop-shadow(0 0 7px gray);
}

#loading-image {
  display: none;
  align-items: center;
  justify-content: center;
}

video {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 730px;
  width: 1066px;
  margin-left: 430px;
  margin-top: 30px;
  margin-bottom: 20px;
}

#video {
  -o-transform: scaleX(-1);
  -moz-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.container {
  display: none;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
  font-weight: bold;
  font-size: larger;
}

.buttons-section {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin-bottom: 30px;
}

.buttons-section button {
  background-color: white;
  color: var(--button-text-color);
  border: 2px solid var(--button-text-color);
  font-size: large;
  font-weight: 500;
  padding: 10px;
  margin-top: 10px;
}

.buttons-section #btn-start,
#btn-stop,
#btn-finish,
#re-record {
  display: none;
}

.buttons-section #btn-stop {
  margin-left: 7px;
}

button:hover {
  background-color: var(--button-text-color);
  color: white;
  transition: 0.2s;
}

#watch-preview {
  display: none;
}

.video-status {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  font-size: large;
  margin-top: 20px;
}

.info {
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  font-size: large;
}

#video-preview-header {
  display: none;
  text-align: center;
}

#video-preview {
  display: none;
}

.footer-section {
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-section #company-name {
  font-weight: 600;
}

@media screen and (max-width: 768px) {
  video {
    height: 400px;
    width: 600px;
    margin-left: 100px;
  }
}

@media screen and (max-width: 500px) {
  video {
    height: 300px;
    width: 410px;
    margin-left: 50px;
  }

  .container {
    font-size: medium;
    width: fit-content;
  }

  .buttons-section button {
    font-size: medium;
  }

  .container {
    width: fit-content;
  }
}

@media screen and (max-width: 375px) {
  video {
    margin-left: 0;
  }
}

